<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BeautyTips">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="1dp"
                android:id="@+id/imgview"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="150dp"
                android:background="@drawable/beauty_tips"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="The V Exercise"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/diet_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:text="@string/beauty_title1"
                android:textSize="16sp" />

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                ads:adSize="LARGE_BANNER"
                ads:adUnitId="@string/AdMob_BannerAd_ID" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="\n Pouting Fish"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:text="@string/beauty_title2"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="\n The Smlile Smooker"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:text="@string/beauty_title3"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="\n Smooker The Brow"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:text="@string/beauty_title4"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="\n The Giraffe"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:text="@string/beauty_title5"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="\n Facial Acupuncture"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:text="@string/beauty_title6"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="\n Sleep Properly"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:text="@string/beauty_title7"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="\n Avoid Sun"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:text="@string/beauty_title8"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="\n Quit Smooking and Alchohol"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:text="@string/beauty_title9"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="\n Additional Tips"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:text="@string/beauty_title10"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <!--<LinearLayout
        android:id="@+id/banner_container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"/>-->

</RelativeLayout>